Fix product detail media full view on mobile

--- a/src/simi/App/Bianca/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/src/simi/App/Bianca/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -622,6 +622,11 @@ $colorRed: #b91c1c;
                             bottom: 103px;
                         }
                     }
+                    .simi-react-image-video-container > div{
+                        svg{
+                            font-size: 40px!important;
+                        }
+                    }
                 }
                 .title{
                     margin-left: 0px;
